--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
+    "node-pre-gyp": "^0.17.0",
     "nodemon": "^2.0.15"
   }
 }
