--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
     "node-pre-gyp": "^0.17.0",
