--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^7.0.0",
     "http-proxy-middleware": "^2.0.2",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
