--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.8",
+    "multer": "^1.4.4",
     "node-pre-gyp": "^0.17.0",
     "nodemon": "^2.0.15"
   }
